--- a/workstyle.css
+++ b/workstyle.css
@@ -12,11 +12,60 @@
     /* position: sticky; */
     margin-right: 0px;
     padding: 11px 17px;
+    background-color: black;
+    color: white;
 }
 .rightside{
     border: 2px solid green;
     width: 66.6%;
     padding: 11px 17px;
     height: 100vh;
-    /* display: flex; */
+    display: flex;
+    overflow: scroll;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
 }
+
+.box{
+    border: 2px solid purple;
+    width: 100%;
+    height: 10em;
+    padding: 5px;
+    margin: 6px;
+    /* display: flex; */
+    /* align-items: center; */
+    /* flex-wrap: wrap; */
+    /* justify-content: space-between;*/
+}
+
+.imagelogo
+{    display: block;
+    height: 35vh;
+    width: 100%;
+    margin: 50px 0px;
+}
+
+.leftbox
+{    border: 2px solid white;
+    border-radius: 28px;
+    justify-content: center;
+    padding: 8px;
+    margin: 30px 7px;
+    width: 94%;
+    display: flex;
+}
+
+.name{
+    justify-content: center;
+    display: flex;
+    width: 94%;
+    height: 58px;
+    margin: 6px 8px;
+    /* border: 2px solid; */
+    padding: 3px;
+    font-size: 2em;
+}
+/* 
+.body{
+    width: 90vw;
+} */
