--- a/workstyle.css
+++ b/workstyle.css
@@ -1,13 +1,14 @@
 .container1{
     display: flex;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     flex-direction: row;
-    width: 100vw;
+    width: 95vw;
+    margin: 0px 20px;
     height: 100vh;
 }
 .leftside{
-    border: 2px solid green;
-    width: 33.3%;
+    /* border: 2px solid green; */
+    width: 30.3%;
     height: 100vh;
     /* position: sticky; */
     margin-right: 0px;
@@ -16,8 +17,8 @@
     color: white;
 }
 .rightside{
-    border: 2px solid green;
-    width: 66.6%;
+    /* border: 2px solid green; */
+    width: 80%;
     padding: 11px 17px;
     height: 100vh;
     display: flex;
@@ -27,16 +28,33 @@
 }
 
 .box{
-    border: 2px solid purple;
-    width: 100%;
-    height: 10em;
+    border: 2px solid black;
+    width: 95%;
+    height: 14em;
     padding: 5px;
     margin: 6px;
-    /* display: flex; */
+    font-size: 0.9em;
+    justify-content: center;
+    border-radius: 8px;
+    /* overflow: hidden; */
+    display: flex;
+    flex-direction: column;
     /* align-items: center; */
     /* flex-wrap: wrap; */
     /* justify-content: space-between;*/
+    transition: all 0.5s ease-in-out 0.3s;
 }
+.box:hover{
+    background-color: grey;
+    color: white;
+}
+.innerbox1{
+    overflow: hidden;
+}
+.innerbox2{
+    float: right;
+}
+
 
 .imagelogo
 {    display: block;
@@ -69,3 +87,16 @@
 .body{
     width: 90vw;
 } */
+.alinks {
+    color: white;
+    text-decoration: none;
+    font-size: 2em;
+}
+
+.grid-container {
+    display: grid;
+    /* grid-auto-columns: auto; */
+    /* grid-column-gap: 2px; */
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-rows: auto;
+}
